--- a/src/app/login/login.page.scss
+++ b/src/app/login/login.page.scss
@@ -11,7 +11,7 @@
 }
 
 .login-background {
-  background: url('assets/Personal.jpg') no-repeat center center;
+  background: url('../../assets/Personal.jpg') no-repeat center center;
   background-size: cover;
   min-height: 100vh;
   display: flex;
