--- a/src/app/login/login.page.scss
+++ b/src/app/login/login.page.scss
@@ -10,7 +10,7 @@
 }
 
 .login-bg {
-  background: url('assets/Personal.jpg') no-repeat center center;
+  background: url('/src/assets/Personal.jpg') no-repeat center center;
   background-size: cover;
   min-height: 100vh;
   display: flex;
