--- a/src/app/finance/finance.page.html
+++ b/src/app/finance/finance.page.html
@@ -9,7 +9,7 @@
 
 <ion-content class="ion-padding" color="light">
 <div style="
-    background: url('../../assets/Personal.jpg') no-repeat center center;
+    background: url('../../assets/1.jpg') no-repeat center center;
     background-size: cover;
     min-height: 100vh;">
   <!-- 💳 Summary Cards -->
