--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -17,13 +17,13 @@
 
 <ion-content class="ion-padding content-bg">
   <div  style="
-    background: url('../../assets/Personal.jpg') no-repeat center center;
+    background: url('../../assets/1.jpg') no-repeat center center;
     background-size: cover;
     min-height: 100vh;">
     
-  <div class="dashboard-title">
-    <h2>{{ username }}! Dashboard</h2>
-    <p>Select a section to get started</p>
+  <div class="dashboard-title" >
+    <h2 style="color: white;">{{ username }}! Dashboard</h2>
+    <p style="color: white;">Select a section to get started</p>
   </div>
 
   <ion-grid>
