--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -10,7 +10,7 @@
   class="ion-padding ion-align-items-center ion-justify-content-center"
   >
 <div   style="
-    background: url('/assets/Personal.jpg') no-repeat center center;
+    background: url('../../assets/1.jpg') no-repeat center center;
     background-size: cover;
     min-height: 100vh;">
   
