--- a/src/app/task/task.page.html
+++ b/src/app/task/task.page.html
@@ -10,7 +10,7 @@
 
 <ion-content fullscreen class="ion-padding dashboard-content">
 <div style="
-    background: url('../../assets/Personal.jpg') no-repeat center center;
+    background: url('../../assets/1.jpg') no-repeat center center;
     background-size: cover;
     min-height: 100vh;">
    <ion-grid>
@@ -21,7 +21,7 @@
       <ion-col size="12" size-md="6">
         <ion-card class="glass-card shadow-card">
           <ion-card-header>
-            <ion-card-title>📅 Today's Tasks</ion-card-title>
+            <ion-card-title style="color: white;">📅 Today's Tasks</ion-card-title>
           </ion-card-header>
 
           <ion-card-content>
@@ -98,7 +98,7 @@
       <ion-col size="12" size-md="6">
         <ion-card class="glass-card shadow-card">
           <ion-card-header>
-            <ion-card-title>📈 Progress Overview</ion-card-title>
+            <ion-card-title style="color: white;">📈 Progress Overview</ion-card-title>
           </ion-card-header>
           <ion-card-content class="chart-container">
             <canvas id="pieChart"></canvas>
@@ -114,7 +114,7 @@
       <ion-col size="12" size-md="6">
         <ion-card class="glass-card shadow-card">
           <ion-card-header>
-            <ion-card-title> Appointments</ion-card-title>
+            <ion-card-title style="color: white;"> Appointments</ion-card-title>
           </ion-card-header>
           <ion-card-content>
             <ion-list>
@@ -123,7 +123,7 @@
                 <ion-badge slot="end" color="tertiary">3 PM</ion-badge>
               </ion-item>
               <ion-item lines="none">
-                <ion-label>Project Review</ion-label>
+                <ion-label style="color: white;">Project Review</ion-label>
                 <ion-badge slot="end" color="secondary">6 PM</ion-badge>
               </ion-item>
             </ion-list>
