--- a/src/app/homepage/homepage.page.html
+++ b/src/app/homepage/homepage.page.html
@@ -42,9 +42,11 @@
   <!-- Banner Image Section -->
  <!-- Banner Image with Overlay Title -->
 <div class="banner-image-container w3-animate-top">
-  <img src="../../assets/banner.jpg" alt="Tracker Banner" class="banner-image" />
+  <img src="../../assets/image.jpg" alt="Tracker Banner" class="banner-image" />
   <div class="banner-title-overlay">
-    <h1 class="banner-title-text">Personal Tracker App</h1>
+    <!-- <h1 >Personal Tracker App</h1> -->
+
+   <h1 #heroText class="typewriter-heading" ></h1>
   </div>
 </div>
 
